TEST_PROGRAMS/INVALID/lucas_stinchcombe/no_semicolons.min
# invalid minilang program with missing semicolons

var a: int;
var b: int;
var c: int;
var answer: int;

a = 10
b = 6
c = a - b
answer = 1

while a-b do
	answer = answer * a;
	a = a - 1;
done

while c do
	answer = answer / c;
	c = c - 1;
done

